--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "scripts": {
     "clean": "rimraf dist",
     "start": "node server",
-    "dev": "NODE_ENV=development node devServer",
+    "dev": "set NODE_ENV=development && node devServer",
     "test": "mocha --compilers js:babel/register --recursive",
     "test:watch": "npm test -- --watch",
     "lint": "eslint src",
-    "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build:webpack": "set NODE_ENV=production && webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack"
   },
   "repository": {
